[project]
name = "pcgraph"
description = "A library for machine learning based on predictive coding graphs"
readme = "README.md"
urls.Homepage = "https://github.com/scottjmaddox/pcgraph"
urls."Bug Tracker" = "https://github.com/scottjmaddox/pcgraph/issues"
authors = [{ name = "Scott J Maddox", email = "scottjmaddox@gmail.com" }]
license.file = "LICENSE.txt"
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Physics",
]
dynamic = ["version"]
requires-python = ">=3.7"
dependencies = [
  "torch>=1.13.0",
]

[project.optional-dependencies]
test = [
  "pytest>=6.0",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/pcgraph/_version.py"
